tests/lean/structSorryBug.lean.expected.out
structSorryBug.lean:2:19-2:25: error: unknown identifier 'HasArr'
structSorryBug.lean:4:17-4:32: error: invalid {...} notation, structure type expected
  Nat
